--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/web_clothes.css")  
     @Scripts.Render("~/bundles/modernizr")
+    @Styles.Render("~/Content/Content_Boostrap/bootsrap.css")
+    @Styles.Render("~/Content/PagedList.css")
     <link href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css" rel="stylesheet" />
     <script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
     <script src="~/Scripts/web_clothes.js"></script>
