--- a/Areas/admin/Views/brands/Create.cshtml
+++ b/Areas/admin/Views/brands/Create.cshtml
@@ -6,7 +6,7 @@
 }
 
 
-<section class="vh-100 bg-image"
+<section class="vh-a bg-image"
          style="background-image: url('https://previews.123rf.com/images/skunkeye/skunkeye1512/skunkeye151200169/49352963-ganja-weed-marijuana-seamless-vector-pattern-background.jpg');">
     <div class="mask d-flex align-items-center h-100 gradient-custom-3">
         <div class="container h-100">
@@ -33,7 +33,7 @@
                                     </div>
                                     <div class="form-group">
                                         <div class="col-md-offset-2 col-md-12">
-                                            <input type="submit" value="Create" class="btn btn-default" />
+                                            <input type="submit" value="Tạo" class="btn btn-default" />
                                         </div>
                                     </div>
                                 </div>
