--- a/Areas/admin/Views/brands/Delete.cshtml
+++ b/Areas/admin/Views/brands/Delete.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<section class="vh-100 bg-image"
+<section class="vh-a bg-image"
          style="background-image: url('https://previews.123rf.com/images/skunkeye/skunkeye1512/skunkeye151200169/49352963-ganja-weed-marijuana-seamless-vector-pattern-background.jpg');">
     <div class="mask d-flex align-items-center h-100 gradient-custom-3">
         <div class="container h-100">
@@ -33,7 +33,7 @@
 
                                     <div class="form-actions no-color">
                                         <input type="submit" value="Delete" class="btn btn-default" style="margin-top:10px;"/> |
-                                        @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-success" })
+                                        @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-danger" })
                                     </div>
                                 }
                             </div>
@@ -43,3 +43,4 @@
             </div>
         </div>
     </div>
+</section>
