--- a/Areas/admin/Views/categories/Create.cshtml
+++ b/Areas/admin/Views/categories/Create.cshtml
@@ -6,26 +6,26 @@
 }
 
 
-<section class="vh-100 bg-image"
-         style="background-image: url('https://previews.123rf.com/images/skunkeye/skunkeye1512/skunkeye151200169/49352963-ganja-weed-marijuana-seamless-vector-pattern-background.jpg');">
+<section class="vh-a bg-image"
+         style="background-image: url('https://previews.123rf.com/images/skunkeye/skunkeye1512/skunkeye151200169/49352963-ganja-weed-marijuana-seamless-vector-pattern-background.jpg'">
     <div class="mask d-flex align-items-center h-100 gradient-custom-3">
         <div class="container h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
-                <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                <div class="col-auto col-md-auto col-lg-auto col-xl-auto">
                     <div class="card" style="border-radius: 15px;">
                         <div class="card-body p-5">
-                            <h2>TẠO LOẠI ĐỒ MỚI</h2>
+                            <h2>Create</h2>
 
                             @using (Html.BeginForm())
                             {
                                 @Html.AntiForgeryToken()
 
                                 <div class="form-horizontal">
-                                    <h4>LOẠI</h4>
+                                    <h4>category</h4>
                                     <hr />
                                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                                     <div class="form-group">
-                                        @Html.LabelFor(model => model.name_category, htmlAttributes: new { @class = "control-label col-md-3" })
+                                        @Html.LabelFor(model => model.name_category, htmlAttributes: new { @class = "control-label col-md-10" })
                                         <div class="col-md-12">
                                             @Html.EditorFor(model => model.name_category, new { htmlAttributes = new { @class = "form-control" } })
                                             @Html.ValidationMessageFor(model => model.name_category, "", new { @class = "text-danger" })
@@ -41,7 +41,7 @@
                             }
 
                             <div>
-                                @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-success" })
+                                @Html.ActionLink("Back to List", "Index", null, new {@class="btn btn-danger"})
                             </div>
                         </div>
                     </div>
