--- a/Areas/admin/Views/categories/Delete.cshtml
+++ b/Areas/admin/Views/categories/Delete.cshtml
@@ -6,16 +6,19 @@
 }
 
 
-<section class="vh-100 bg-image"
-         style="background-image: url('https://previews.123rf.com/images/skunkeye/skunkeye1512/skunkeye151200169/49352963-ganja-weed-marijuana-seamless-vector-pattern-background.jpg');">
+<section class="vh-a bg-image"
+         style="background-image: url('https://previews.123rf.com/images/skunkeye/skunkeye1512/skunkeye151200169/49352963-ganja-weed-marijuana-seamless-vector-pattern-background.jpg'">
     <div class="mask d-flex align-items-center h-100 gradient-custom-3">
         <div class="container h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
-                <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+                <div class="col-auto col-md-auto col-lg-auto col-xl-auto">
                     <div class="card" style="border-radius: 15px;">
-                        <div class="card-body p-5">                            
-                            <h3>BẠN MUỐN XÓA LOẠI NÀY</h3>
+                        <div class="card-body p-5">
+                            <h2>Delete</h2>
+
+                            <h3>Are you sure you want to delete this?</h3>
                             <div>
+                                <h4>category</h4>
                                 <hr />
                                 <dl class="dl-horizontal">
                                     <dt>
@@ -32,9 +35,11 @@
                                 {
                                     @Html.AntiForgeryToken()
 
-                                    <div class="form-actions no-color">
-                                        <input type="submit" value="Delete" class="btn btn-default" /> |
-                                        @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-success" })
+                                    <div class="col-md-offset-2 col-md-12">
+                                        <input type="submit" value="Delete" class="btn btn-default" />
+                                    </div>
+                                    <div class="col-md-offset-2 col-md-12">
+                                         @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-danger" })
                                     </div>
                                 }
                             </div>
