--- a/Areas/admin/Views/products/Details.cshtml
+++ b/Areas/admin/Views/products/Details.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-<section class="vh-100 bg-image"
+<section class="vh-a bg-image"
          style="background-image: url('https://previews.123rf.com/images/skunkeye/skunkeye1512/skunkeye151200169/49352963-ganja-weed-marijuana-seamless-vector-pattern-background.jpg');">
     <div class="mask d-flex align-items-center h-100 gradient-custom-3">
         <div class="container h-100">
