--- a/Areas/admin/Views/products/Index.cshtml
+++ b/Areas/admin/Views/products/Index.cshtml
@@ -8,13 +8,13 @@
 
 
 <section class="vh-a bg-image"
-         style="background-image: url('https://previews.123rf.com/images/skunkeye/skunkeye1512/skunkeye151200169/49352963-ganja-weed-marijuana-seamless-vector-pattern-background.jpg'); font-family:'Times New Roman', Times, serif;">
+         style="background-image: url('https://previews.123rf.com/images/skunkeye/skunkeye1512/skunkeye151200169/49352963-ganja-weed-marijuana-seamless-vector-pattern-background.jpg');">
     <div class="mask d-flex align-items-center h-auto gradient-custom-3">
         <div class="container h-auto">
             <div class="row d-flex justify-content-center align-items-center h-auto">
                 <div class="col-auto col-md-auto col-lg-auto col-xl-auto">
                     <div class="card" style="border-radius: 15px;">
-                        <div class="card-body p-md-5">
+                        <div class="card-body p-lg-5 p-md-5 p-sm-5">
                             <h2>Index</h2>
 
                             <p>
@@ -22,25 +22,25 @@
                             </p>
                             <table class="table">
                                 <tr>
-                                    <th>
+                                    <th class="col-md-2">
                                         Tên Sản Phẩm
                                     </th>
-                                    <th>
+                                    <th class="col-md-1">
                                         Giá
                                     </th>
-                                    <th>
+                                    <th class="col-md-2">
                                         Miêu Tả
                                     </th>
-                                    <th>
+                                    <th class="col-md-1">
                                         Hình Sản Phẩm
                                     </th>
-                                    <th>
+                                    <th class="col-md-1">
                                         Hình Size
                                     </th>
-                                    <th>
+                                    <th class="col-md-1" >
                                         Tên Hãng
                                     </th>
-                                    <th>
+                                    <th class="col-md-1">
                                         Tên Loại
                                     </th>
                                     <th></th>
@@ -72,7 +72,7 @@
                                             @Html.DisplayFor(modelItem => item.category.name_category)
                                         </td>
 
-                                        <td>
+                                        <td class="row-cols-auto">
                                             @Html.ActionLink("Edit", "Edit", new { id = item.id_products }) |
                                             @Html.ActionLink("Details", "Details", new { id = item.id_products }) |
                                             @Html.ActionLink("Delete", "Delete", new { id = item.id_products })
