--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -54,12 +54,10 @@
 <nav class="tab3">
     <h2></h2>
 </nav>
-<div class="row"
-     style="background-image: url('https://previews.123rf.com/images/skunkeye/skunkeye1512/skunkeye151200169/49352963-ganja-weed-marijuana-seamless-vector-pattern-background.jpg');">
+<div class="row">
     @foreach (var clothes in Model)
     {
-        <div class="card col-sm-3 col-md-3 col-lg-2 d-flex align-items-stretch cart-section"
-             style="background-image: url('https://previews.123rf.com/images/skunkeye/skunkeye1512/skunkeye151200169/49352963-ganja-weed-marijuana-seamless-vector-pattern-background.jpg');">
+        <div class="card col-sm-3 col-md-3 col-lg-3 d-flex align-items-stretch cart-section">
 
             <a href="@Url.Action("Details", "Home", new { id = clothes.id_products })">
                 <img class="card-img-top book-picture h-100 w-50  col-sm-3 col-md-3 col-lg-2 "
