--- a/Areas/admin/Views/customer_order/Create.cshtml
+++ b/Areas/admin/Views/customer_order/Create.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Create";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/admin/Views/Shared/admin_Layout.cshtml"; Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 
