--- a/Views/Home/chinh_sach_thanh_toan_view.cshtml
+++ b/Views/Home/chinh_sach_thanh_toan_view.cshtml
@@ -1,16 +1,16 @@
 ﻿
 @{
     ViewBag.Title = "chinh_sach_thanh_toan_view";
-    Layout = "~/Views/privacy/chinh_sach_thanh_toan.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<nav class="dieu-khoan-tag">    
+<nav class="dieu-khoan-tag">
     <a href="@Url.Action("chinh_sach_thanh_toan_view","Home", new {@class="dieu-khoan"})">Chính Sách Thanh Toán</a>
 </nav>
 <nav class="title-dieu-khoan">
     <div class="main-dieu-khoan">
         <p style="padding:6rem 0; font-size:20px;">
-            Mua hàng nhanh chóng và tiện lợi với Co_chay.com bằng hình thức thanh toán khi nhận hàng COD:<br/><br />
+            Mua hàng nhanh chóng và tiện lợi với Co_chay.com bằng hình thức thanh toán khi nhận hàng COD:<br /><br />
 
             - Là cách thanh toán dễ dàng nhất, đặc biệt khi bạn không quen với các hình thức thanh toán trực tuyến.<br /><br />
 
