--- a/Areas/admin/Views/Shared/admin_Layout.cshtml
+++ b/Areas/admin/Views/Shared/admin_Layout.cshtml
@@ -4,25 +4,35 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/web_clothes.css")  
+    @Styles.Render("~/Content/web_Clothes.css")
+    @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    @Styles.Render("~/Content/Content_Boostrap/bootsrap.css")
-    @Styles.Render("~/Content/PagedList.css")
     <link href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css" rel="stylesheet" />
     <script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
     <script src="~/Scripts/web_clothes.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <script src="//cdn.ckeditor.com/4.19.0/standard/ckeditor.js"></script>
     <script src="https://kit.fontawesome.com/0ab0c4b239.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+    <style>
+        .tab2-title ul {
+            display: flex;
+        }
+
+            .tab2-title ul li {
+                list-style-type: none;
+                padding: 0 2rem;
+            }
+    </style>
 </head>
 <body>
-        
+
     <nav class="nav">
         <div class="logo">
-            <a href="@Url.Action("Index","Home")"><img src="~/Content/Images/logo.jpg" /></a>
+            <a href="@Url.Action("Index","homeAdmin")"><img src="~/Content/Images/logo.jpg" /></a>
         </div>
         @using (Html.BeginForm("Search", "search", FormMethod.Get))
         {
@@ -40,19 +50,19 @@
             else
             {
                 <li class="nav-item">
-                    <a href="@Url.Action("DangNhap","Users")">Login</a>
+                    <a href="@Url.Action("DangNhap","homeAdmin")">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a href="@Url.Action("Register","Users")">Register</a>
+                    <a href="@Url.Action("Register","homeAdmin")">Register</a>
                 </li>
                 <li class="nav-item">
-                    <a href="@Url.Action("Contact_View", "Home")">Contact</a>
+                    <a href="@Url.Action("Contact_View", "homeAdmin")">Contact</a>
                 </li>
             }
 
         </ul>
         <div class="ml-auto">
-            @Html.Action("cartpartial", "cart")
+            @*@Html.Action("cartpartial", "cart")*@
         </div>
         <div class="row justify-content-md-start">
             <div class="col-md-15">
@@ -66,10 +76,10 @@
                             <p>Name: @Session["name_customer"].ToString()</p>
                             <a href="@Url.Action("LogOut","Users")" class="btn btn-warning">Logout</a>
                         }
-                        else if (Session["TaiKhoan"]!=null)
-                                    {
-                            <p>Name: @Session["TaiKhoan"].ToString()</p>
-                            <a href="@Url.Action("LogOut","Users")" class="btn btn-warning">Logout</a>
+                        else if (Session["TaiKhoan"] != null)
+                        {
+                            <p>Name: @Session["name_customer"].ToString()</p>
+                            <a href="@Url.Action("LogOut","TaiKhoan")" class="btn btn-warning">Logout</a>
                         }
                         else
                         {
@@ -81,6 +91,7 @@
             </div>
         </div>
     </nav>
+    
     <div>
         @RenderBody()
     </div>
@@ -98,11 +109,11 @@
             <div class="help">
                 <h2>Hướng Dẫn</h2>
                 <ul class="de-muc">
-                    <li><a href="@Url.Action("dieu_khoan_view","Home")">Điều Khoản</a></li>
-                    <li><a href="@Url.Action("huong_dan_mua_hang_view","Home")">Hướng Dẫn Mua Hàng</a></li>
-                    <li><a href="@Url.Action("chinh_sach_doi_tra_view","Home")">Chính Sách Đổi Trả</a></li>
-                    <li><a href="@Url.Action("chinh_sach_bao_mat_thong_tin_view","Home")">Bảo Mật Thông Tin Khách Hàng</a></li>
-                    <li><a href="@Url.Action("chinh_sach_thanh_toan_view","Home")">Chính Sách Thanh Toán</a></li>
+                    <li><a href="@Url.Action("dieu_khoan_view","privacy")">Điều Khoản</a></li>
+                    <li><a href="@Url.Action("huong_dan_mua_hang_view","privacy")">Hướng Dẫn Mua Hàng</a></li>
+                    <li><a href="@Url.Action("chinh_sach_doi_tra_view","privacy")">Chính Sách Đổi Trả</a></li>
+                    <li><a href="@Url.Action("chinh_sach_bao_mat_thong_tin_view","privacy")">Bảo Mật Thông Tin Khách Hàng</a></li>
+                    <li><a href="@Url.Action("chinh_sach_thanh_toan_view","privacy")">Chính Sách Thanh Toán</a></li>
                     <li class="reversed"><p>Co_Chay®</p></li>
                     <li class="reversed"><p>Copy By Needs Of Wisdom®</p></li>
                 </ul>
@@ -114,11 +125,13 @@
                     <li><a href="https://goo.gl/maps/hLsM1CTMYTTRULUy9">CN 2 <span style="font-weight: bold;">445 Sư Vạn Hạnh, P.12, Q.10</span></a></li>
                     <li><a href="https://goo.gl/maps/s86qZcmxQzWW3Kdn8">CN 3 <span style="font-weight: bold;">48 Trần Quang Diệu, P.14, Q.3</span></a></li>
                     <li><a href="https://goo.gl/maps/nYsG4nMUZvYAEgT57">CN 4 <span style="font-weight: bold;">463 Quang Trung, P.10, Q. Gò Vấp</span></a></li>
+                    <li><p>Điện Thoại: <span style="font-weight: bold;">0946253769</span></p></li>
+                    <li>
+                        <p>Email: <span style="font-weight: bold;">tranbaohoang70@gmail.com</span></p> <span style="color: white">
+                            |
+                        </span> <p>Email: <span style="font-weight: bold;">tranbaohoang2003@gmail.com</span></p>
+                    </li>
                 </ul>
-                <div style="color:white;">
-                    <p>Điện Thoại: <span style="font-weight: bold;">0946253769</span></p>
-                    <p>Email: <span style="font-weight: bold;">tranbaohoang70@gmail.com</span></p> <span style="color: white"> |</span> <p>Email: <span style="font-weight: bold;">tranbaohoang2003@gmail.com</span></p>
-                </div>
             </div>
         </div>
     </nav>
