--- a/Areas/admin/Views/brands/Index.cshtml
+++ b/Areas/admin/Views/brands/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/admin/Views/Shared/admin_Layout.cshtml";
 }
 
 <section class="vh-a bg-image"
