--- a/Areas/admin/Views/customer_order/Delete.cshtml
+++ b/Areas/admin/Views/customer_order/Delete.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Delete";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/admin/Views/Shared/admin_Layout.cshtml";
 }
 
 <h2>Delete</h2>
