--- a/Areas/admin/Views/products/Details.cshtml
+++ b/Areas/admin/Views/products/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model do_an_web.Models.product
 @{
     ViewBag.Title = "Details";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/admin/Views/Shared/admin_Layout.cshtml";
 }
 
 
