--- a/Areas/admin/Views/products/Index.cshtml
+++ b/Areas/admin/Views/products/Index.cshtml
@@ -3,7 +3,7 @@
 @using PagedList.Mvc;
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/admin/Views/Shared/admin_Layout.cshtml";
 }
 
 
